fix counter and nested block element alignment

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -151,21 +151,23 @@ blockquote {
 ul, ol, dl {
   margin: 0 0 15px 0;
   padding-left: 20px;
-  counter-reset: section;
-  counter-increment: item;
 }
 
 ol {
   list-style: none;
   padding-left: 0;
-} 
+  counter-reset: item;
+}
+
+ol li { display: block; } 
+
 
 ol>li:before {
   float: left;
-  display: inline-block;
   margin-right: 10px;
   font-weight:bold;
   text-align:right;
+  counter-increment: item;
   content:counter(item) ".";
 }
 
